dodanie stron AC i TV

--- a/static/html/TV.html
+++ b/static/html/TV.html
@@ -18,7 +18,7 @@
   <link href="static/css/googlefonts/fonts.css" rel="stylesheet" type="text/css">
 
 
-  <title>Optivent</title>
+  <title>TV</title>
 
 
 
@@ -28,7 +28,7 @@
 
   <header>
     <div class="title">
-      <p>Relay controll</p>
+      <p>TV</p>
     </div>
   </header>
 
@@ -57,6 +57,14 @@
 
 
   <script src="static/js/pages/optivent/optivent-main.js" type="text/javascript"></script>
+
+
+  <section class="menu">
+    <section class="menu">
+      <a href="/TV.html"><button> TV </button></a>
+      <a href="/AC.html"><button> AC </button></a>
+
+    </section>
 
 
 </body>
