--- a/static/html/AC.html
+++ b/static/html/AC.html
@@ -1,72 +1,19 @@
-<!DOCTYPE HTML>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-
-  <script src="static/js/lib/jquery.min.js" type="text/javascript"></script>
-  <script src="static/js/lib/socket.io.slim.js" type="text/javascript"></script>
-
-
-  <link href="static/css/style.css" rel="stylesheet" type="text/css" />
-  <link href="static/css/alert.css" rel="stylesheet" type="text/css" />
-  <link href="static/css/optivent/buttons.css" rel="stylesheet" type="text/css" />
-  <link href="static/css/popup-info.css" rel="stylesheet" type="text/css" />
-  <link href="static/css/fontawesome/css/all.css" rel="stylesheet" type="text/css" />
-  <link href="static/css/googlefonts/fonts.css" rel="stylesheet" type="text/css">
-
-
-  <title>Optivent</title>
-
-
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
 
 <body>
 
-  <header>
-    <div class="title">
-      <p>AC</p>
-    </div>
-  </header>
+  <button class="plus">PLUS</button>
+  <button class="minus">MINUS</button>
 
 
-  <div class="modal" id="modal">
-
-    <div class="modal-body">
-    </div>
-    <i class="fas fa-info massage-popup-icon"></i>
-  </div>
-  <div id="overlay"></div>
-
-
-  <button class="optivent-button" id="optivent"></button>
-<!--  <button class="test-button5" id="testbut"></button>-->
-
-
-  <script src="static/js/pages/commonGlobalVariables.js"></script>
-  <script src="static/js/pages/optivent/globalVariables.js" type="text/javascript"></script>
-  <script src="static/js/pages/getMessagesText.js"></script>
-
-  <script src="static/js/pages/optivent/optivent-alerts.js" type="text/javascript"></script>
-  <script src="static/js/pages/alert.js"></script>
-  <script src="static/js/pages/optivent/optivent-button.js" type="text/javascript"></script>
-  <script src="static/js/pages/optivent/optivent-events.js" type="text/javascript"></script>
-
-
-  <script src="static/js/pages/optivent/optivent-main.js" type="text/javascript"></script>
-
-  <section class="menu">
-    <section class="menu">
-      <a href="/TV.html"><button> TV </button></a>
-      <a href="/AC.html"><button> AC </button></a>
-
-    </section>
-
-
-
+  <script src="static/js/Respi.js"></script>
 </body>
 
 </html>
