--- a/static/html/TV.html
+++ b/static/html/TV.html
@@ -42,6 +42,18 @@
   <div id="overlay"></div>
 
 
+    <section class="TV_buttons">
+
+    <p class="am-title"></p>
+
+    <button value="monostable" id="uba_inflate" class="am-button"><i class="fas fa-plus"></i></button>
+    <p class="am-hPa">UBA</p>
+    <button value="monostable" id="uba_deflate" class="am-button"><i class="fas fa-minus"></i></button>
+
+  </section>
+
+
+
   <button class="optivent-button" id="optivent"></button>
 <!--  <button class="test-button5" id="testbut"></button>-->
 
@@ -53,6 +65,7 @@
   <script src="static/js/pages/optivent/optivent-alerts.js" type="text/javascript"></script>
   <script src="static/js/pages/alert.js"></script>
   <script src="static/js/pages/optivent/optivent-button.js" type="text/javascript"></script>
+    <script src="static/js/pages/optivent/am-button.js" type="text/javascript"></script>
   <script src="static/js/pages/optivent/optivent-events.js" type="text/javascript"></script>
 
 
