--- a/static/html/AC.html
+++ b/static/html/AC.html
@@ -2,12 +2,25 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+
+
+  <link href="static/css/style.css" rel="stylesheet" type="text/css" />
+  <link href="static/css/fontawesome/css/all.css" rel="stylesheet" type="text/css" />
+  <link href="static/css/googlefonts/fonts.css" rel="stylesheet" type="text/css">
+
+
   <title>Document</title>
 </head>
 
 <body>
+
+  <header>
+    <div class="title">
+      <p>AC</p>
+    </div>
+  </header>
 
   <button class="plus">PLUS</button>
   <button class="minus">MINUS</button>
