--- a/static/html/AC.html
+++ b/static/html/AC.html
@@ -12,23 +12,42 @@
 
   <header>
     <div class="title">
-      <p>AC</p>
+      <p>Test1</p>
     </div>
   </header>
 
 
     <section class="selector_AC">
 
-  <button class="minus_button">-</button>
+  <button class="button minus_button">-</button>
   <p class="Value_indicator">Value</p>
-  <button class="plus_button">+</button>
+  <button class="button plus_button">+</button>
   </section>
 
 
+  <header>
+    <div class="title">
+      <p>Test2</p>
+    </div>
+  </header>
 
 
-<!--  <button class="plus">PLUS</button>-->
-<!--  <button class="minus">MINUS</button>-->
+    <section class="selector_AC">
+
+  <button class="button minus_button">-</button>
+  <p class="Value_indicator">Value</p>
+  <button class="button plus_button">+</button>
+  </section>
+
+
+    <button class="button_start">START</button>
+
+
+    <section class="menu">
+      <a href="/TV.html"><button  class = "link_button"> t1 </button></a>
+      <a href="/AC.html"><button  class = "link_button"> t2 </button ></a>
+
+    </section>
 
 
   <script src="static/js/Respi.js"></script>
