wstepnie ustawiona strona

--- a/static/html/AC.html
+++ b/static/html/AC.html
@@ -12,7 +12,7 @@
 
   <header>
     <div class="title">
-      <p>Test1</p>
+      <p>AC</p>
     </div>
   </header>
 
@@ -27,25 +27,25 @@
 
   <header>
     <div class="title">
-      <p>Test2</p>
+      <p>RATE</p>
     </div>
   </header>
 
 
     <section class="selector_AC">
 
-  <button class="button minus_button">-</button>
+  <button class="button minus_rate">-</button>
   <p class="Value_indicator">Value</p>
-  <button class="button plus_button">+</button>
+  <button class="button plus_rate">+</button>
   </section>
 
-
+    <section class="start_area">
     <button class="button_start">START</button>
-
+  </section>
 
     <section class="menu">
-      <a href="/TV.html"><button  class = "link_button"> t1 </button></a>
-      <a href="/AC.html"><button  class = "link_button"> t2 </button ></a>
+      <a href="/TV.html" class = "no_decoration_link"><button  class = "link_button"> TV </button></a>
+      <a href="/AC.html" class = "no_decoration_link"><button  class = "link_button"> AC </button ></a>
 
     </section>
 
