dodane eventy, poprawione kolory, dodane pliki dla TV

--- a/static/html/AC.html
+++ b/static/html/AC.html
@@ -4,7 +4,9 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-  <link href="static/css/respi.css" rel="stylesheet">
+  <link href="static/css/AC.css" rel="stylesheet">
+  <script src="static/js/lib/jquery.min.js" type="text/javascript"></script>
+  <script src="static/js/lib/socket.io.slim.js" type="text/javascript"></script>
 
   </head>
 
@@ -50,7 +52,7 @@
     </section>
 
 
-  <script src="static/js/Respi.js"></script>
+  <script src="static/js/AC.js"></script>
 
 </body>
 
