--- a/static/html/TV.html
+++ b/static/html/TV.html
@@ -22,7 +22,7 @@
     <section class="selector_AC">
 
   <button class="button minus_button">-</button>
-  <p class="Value_indicator">Value</p>
+  <p class="Value_indicator current_value">Value</p>
   <button class="button plus_button">+</button>
   </section>
 
@@ -37,7 +37,7 @@
     <section class="selector_AC">
 
   <button class="button minus_rate">-</button>
-  <p class="Value_indicator">Value</p>
+  <p class="Value_indicator current_rate">Value</p>
   <button class="button plus_rate">+</button>
   </section>
 
@@ -53,6 +53,7 @@
 
 
   <script src="static/js/TV.js"></script>
+  <script src="static/js/send_status.js"></script>
 
 </body>
 
