dzialajace bez statusu startu

--- a/static/html/TV.html
+++ b/static/html/TV.html
@@ -22,7 +22,7 @@
     <section class="selector_AC">
 
   <button class="button minus_button">-</button>
-  <p class="Value_indicator current_value">Value</p>
+  <p class="Value_indicator current_value">00</p>
   <button class="button plus_button">+</button>
   </section>
 
@@ -37,7 +37,7 @@
     <section class="selector_AC">
 
   <button class="button minus_rate">-</button>
-  <p class="Value_indicator current_rate">Value</p>
+  <p class="Value_indicator current_rate">00</p>
   <button class="button plus_rate">+</button>
   </section>
 
