--- a/static/html/AC.html
+++ b/static/html/AC.html
@@ -22,7 +22,7 @@
     <section class="selector_AC">
 
   <button class="button minus_button">-</button>
-  <p class="Value_indicator current_value">Value</p>
+  <p class="Value_indicator current_value">00</p>
   <button class="button plus_button">+</button>
   </section>
 
@@ -37,12 +37,13 @@
     <section class="selector_AC">
 
   <button class="button minus_rate">-</button>
-  <p class="Value_indicator current_rate">Value</p>
+  <p class="Value_indicator current_rate">00</p>
   <button class="button plus_rate">+</button>
   </section>
 
     <section class="start_area">
     <button class="button_start">START</button>
+
   </section>
 
     <section class="menu">
@@ -54,6 +55,7 @@
 
   <script src="static/js/AC.js"></script>
   <script src="static/js/send_status.js"></script>
+
 </body>
 
 </html>
