brak delay na poczatku petli zapamietywanie START

--- a/static/html/TV.html
+++ b/static/html/TV.html
@@ -47,7 +47,7 @@
 
     <section class="menu">
       <a href="/TV.html" class = "no_decoration_link"><button  class = "link_button"> TV </button></a>
-      <a href="/AC.html" class = "no_decoration_link"><button  class = "link_button"> AC </button ></a>
+      <a href="/AC.html" class = "no_decoration_link"><button  class = "link_button change_site"> AC </button ></a>
 
     </section>
 
