--- a/static/html/AC.html
+++ b/static/html/AC.html
@@ -47,7 +47,7 @@
   </section>
 
     <section class="menu">
-      <a href="/TV.html" class = "no_decoration_link"><button  class = "link_button"> TV </button></a>
+      <a href="/TV.html" class = "no_decoration_link"><button  class = "link_button change_site"> TV </button></a>
       <a href="/AC.html" class = "no_decoration_link"><button  class = "link_button"> AC </button ></a>
 
     </section>
